[package]
name = "pcm-visual"
version = "0.1.0"
authors = ["Lee Goddard <leegee@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
js-sys = "0.3.19"
wasm-bindgen = "0.2.42"
# wasm-bindgen = "0.2"
wee_alloc = { version = "0.4.2", optional = true }
console_error_panic_hook = { version = "0.1.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'AudioBuffer',
  'CanvasRenderingContext2d',
  'console', 
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]

[profile.release]
opt-level = "s"
debug = true
